# mega

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  cube.mega  project.manifest  project_manifest.manifest  readme.md  square.mega  test.cpp  test_cpp_include.hpp  test_include.mega
api/clang_plugin/: clang_plugin.hpp
api/compiler/: codegen.hpp  compiler.hpp  configuration.hpp  dataAccessPrinter.hpp  instructionCodeGenerator.hpp
api/database/: database.hpp
api/invocation/: elimination.hpp  generic_operation_visitor.hpp  invocation.hpp  name_resolution.hpp
api/jit/: allocator.hpp  api.hpp  code_generator.hpp  component_manager.hpp  function_declarations.hpp  functions.hpp  indent.hpp  inja.hpp  invocation_functions.hxx.jinja  invocation_functions.json  jit.hpp  object_functions.hxx.jinja  object_functions.json  object_header.hpp  operator_functions.hxx.jinja  orc.hpp  program.hpp  program_functions.hxx.jinja  program_functions.json  relation.hpp  relation_functions.hxx.jinja  relation_functions.json  size_alignment.hpp
api/log/: index.hpp  log.hpp  offset.hpp  record.hpp  records.hxx.jinja  records.json
api/map/: base.hpp  basicFeature.hpp  buffer.hpp  cgalSettings.hpp  cgalUtils.hpp  clip.hpp  compilation.hpp  connection.hpp  container.hpp  dataBitmap.hpp  editBase.hpp  editInteractions.hpp  editNested.hpp  editRoot.hpp  editSchematic.hpp  factory.hpp  file.hpp  geometry.hpp  glyph.hpp  glyphSpec.hpp  glyphSpecProducer.hpp  location.hpp  markup.hpp  mission.hpp  node.hpp  object.hpp  property.hpp  rasteriser.hpp  readerWriter.hpp  schematic.hpp  sector.hpp  ship.hpp  site.hpp  space.hpp  svgUtils.hpp  transform.hpp  visibility.hpp  wall.hpp
api/mega/: address_table.hpp  allocator.hpp  (+54 more)
cmake/: CMakeLists.txt  preprocess_cpp.cmake  run_inja.cmake
cmake/clang_plugin/: CMakeLists.txt
cmake/compiler/: CMakeLists.txt
cmake/database/: CMakeLists.txt
cmake/database/database/: CMakeLists.txt
cmake/database/database_compiler/: CMakeLists.txt
cmake/database/database_compiler_driver/: CMakeLists.txt
cmake/database_compiler/: CMakeLists.txt
cmake/database_compiler_driver/: CMakeLists.txt
cmake/database_reporters/: CMakeLists.txt
cmake/driver/: CMakeLists.txt
cmake/editor/: CMakeLists.txt
cmake/event/: CMakeLists.txt
cmake/il/: CMakeLists.txt
cmake/il/backend/: CMakeLists.txt
cmake/il/frontend/: CMakeLists.txt
cmake/il/generator/: CMakeLists.txt
cmake/il/il_gen/: CMakeLists.txt
cmake/inja/: CMakeLists.txt
cmake/invocation/: CMakeLists.txt
cmake/jit/: CMakeLists.txt
cmake/log/: CMakeLists.txt
cmake/map/: CMakeLists.txt
cmake/mega/: CMakeLists.txt
cmake/orc/: CMakeLists.txt
cmake/parser/: CMakeLists.txt
cmake/pch/: CMakeLists.txt
cmake/pipeline/: CMakeLists.txt
cmake/preprocessor/: CMakeLists.txt
cmake/reports/: CMakeLists.txt
cmake/runtime/: CMakeLists.txt
cmake/schematic/: CMakeLists.txt
cmake/service/: CMakeLists.txt
cmake/service/daemon/: CMakeLists.txt
cmake/service/executor/: CMakeLists.txt
cmake/service/host/: CMakeLists.txt
cmake/service/leaf/: CMakeLists.txt
cmake/service/network/: CMakeLists.txt
cmake/service/plugin/: CMakeLists.txt
cmake/service/plugin_fake/: CMakeLists.txt
cmake/service/protocol/: CMakeLists.txt
cmake/service/protocol/protocol/: CMakeLists.txt
cmake/service/protocol/protocol_compiler/: CMakeLists.txt
cmake/service/protocol/protocol_compiler_driver/: CMakeLists.txt
cmake/service/python/: CMakeLists.txt
cmake/service/report/: CMakeLists.txt
cmake/service/reporters/: CMakeLists.txt
cmake/service/root/: CMakeLists.txt
cmake/service/service/: CMakeLists.txt
cmake/service/terminal/: CMakeLists.txt
cmake/service/tool/: CMakeLists.txt
cmake/service/worker/: CMakeLists.txt
cmake/tests/: CMakeLists.txt
cmake/tests/basic_tests/: CMakeLists.txt
cmake/tests/compiler_tests/: CMakeLists.txt
cmake/tests/database/: CMakeLists.txt
cmake/tests/database/advanced/: CMakeLists.txt
cmake/tests/database/basic/: CMakeLists.txt
cmake/tests/database/multi_stage_base/: CMakeLists.txt
cmake/tests/il_tests/: CMakeLists.txt
cmake/tests/invocation_tests/: CMakeLists.txt
cmake/tests/invoke_proto/: CMakeLists.txt
cmake/tests/ipc_test/: CMakeLists.txt
cmake/tests/mega_tests/: CMakeLists.txt
cmake/tests/orc_tests/: CMakeLists.txt
cmake/tests/preprocessor_tests/: CMakeLists.txt
cmake/tests/symbol_test/: CMakeLists.txt
cmake/tests/system_tests/: CMakeLists.txt
cmake/tests/unit_tests/: CMakeLists.txt
cmake/tests/value_tests/: CMakeLists.txt
cmake/tests/vulkan_tests/: CMakeLists.txt
cmake/toolchain/: CMakeLists.txt  installation_version.cmake.in
cmake/utilities/: CMakeLists.txt
cmake/version/: CMakeLists.txt
cmake/vulkan/: CMakeLists.txt
cmake/vulkan/schema_compiler/: CMakeLists.txt
cmake/vulkan/schema_driver/: CMakeLists.txt
cmake/vulkan/ssa/: CMakeLists.txt
cmake/vulkan/xml_compiler/: CMakeLists.txt
cmake/vulkan/xml_driver/: CMakeLists.txt
doc/: SimulationCycle.md  test.md  test2.md  test3.md
perf/: move_impact.txt
scripts/: clear.sh  copyright.sh  copyright.txt  ipython_init.py  ipython_term.py  logo.txt  python_init.py  run_basic_task.sh  run_basic_task_no_src.sh  run_basic_upto.sh  run_cleanup.sh  run_copyright.sh  run_game_task.sh  run_game_upto.sh  run_service.sh  run_task.sh  run_trace.sh  run_upto.sh  startup.sh  testInterop.py  testInterop2.py  update_templates.sh  util_cleanup.sh  wipe_mega_builds.sh
src/: schema.txt
stuff/: CMakeLists.txt  circle.mega  hexagon.mega  octogon.mega  parrallelogram.mega  pentagon.mega  pyramid.mega  septagon.mega  source_list.txt  sphere.mega  star.mega  tetrahedron.mega  triangle.mega
tests/: allocator_tests.cpp  asio_tests.cpp  compiler_pipeline_tests.cpp  database_compiler_tests.cpp  database_tests.cpp  edsUnitTestWrapper.hpp  file_system_tests.cpp  glob_tests.cpp  io_tests.cpp  main_test_runner.cpp  manifest_tests.cpp  network_tests.cpp  pipeline_tests.cpp  protocol_tests.cpp  reference_tests.cpp  scheduler_tests.cpp  schema_grammar_tests.cpp  sim_state_machine_tests.cpp  test.py
(+1713 files in other folders)
